# UniversalMusic

./: .gitignore  CMakeLists.txt  CMakePresets.json  ProjectNotes.txt  README.md  collections.h  commandhp.cpp  exec.cpp  exec.h  htmlparser.h  main.cpp  network.cpp  network.h  player.cpp  player.h  playlist_test.txt  something.txt  song.cpp  song.h  spotifyinterface.cpp  spotifyinterface.h  testing.cpp  testing.h  unimusic.cpp  unimusic.h  utils.cpp  utils.h  youtubeinterface.cpp  youtubeinterface.h
SpotifyApiTest/: API_Tutorial.txt  playlist.txt
